pamc/src/tests/sample_code/should_succeed/single_file/should_succeed_without_warnings/recursive_index_positivity_checking.ph
type List(T: Type) {
    .Nil(T: Type): List(T),
    .Cons(T: Type, car: T, cdr: List(T)): List(T),
}

type Goofy {
    .C(_: List(Goofy)): Goofy,
}

let goofy = Goofy.C(List.Nil(Goofy));
