pamc/src/tests/sample_code/should_fail/type_check/arity_mismatch/variant.ph
type Empty {}

type Bar {
    .B(T: Type): Bar,
}

let foo = Bar.B(Empty, Empty);
